schema/testdata/validation_request_headers_expression/schema.keel
model ApiKey {
    fields {
        key Text
    }

    operations {
        create createApiKey() {
            @set(apiKey.key = ctx.headers.X_API_TOKEN)
        }
    }
}
